--- a/assets/translations/es/global.json
+++ b/assets/translations/es/global.json
@@ -17,8 +17,8 @@
     },
     "LanguageScreen": {
         "choose": "Elije tu lenguaje!",
-        "spanish": "Español",
-        "english": "Inglés"
+        "es": "Español",
+        "en": "Inglés"
     },
     "Home": {
         "subtitles": {
