--- a/assets/translations/en/global.json
+++ b/assets/translations/en/global.json
@@ -47,7 +47,8 @@
         "frontend-friends": "My friends as Front-End are...",
         "backend-friends1": "And, in the ",
         "backend-friends2": "dark side",
-        "backend-friends3": " Back-End are..."
+        "backend-friends3": " Back-End are...",
+        "utils-friends": "And I constantly use"
     },
     "Experience": {
         "subtitle": "Experience",
